--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -50,7 +50,7 @@
             android:textAppearance="?attr/textAppearanceSubtitle1"
             android:textColor="?attr/colorPrimary"
             android:textStyle="bold" />
-            
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/add_to_cart_button"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
@@ -60,7 +60,16 @@
             android:layout_marginTop="16dp"
             android:layout_toEndOf="@id/book_cover"
             android:text="Add to Cart" />
-            
+
+        <TextView
+            android:id="@+id/book_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/add_to_cart_button"
+            android:layout_marginTop="8dp"
+            android:visibility="gone"
+            android:text="Description" />
+
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
