--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -391,7 +391,7 @@
                             <ImageView
                                 android:layout_width="64dp"
                                 android:layout_height="64dp"
-                                android.src="@android:drawable/ic_menu_agenda" />
+                                android:src="@android:drawable/ic_menu_agenda" />
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
