--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -1,75 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    app:cardCornerRadius="12dp"
+    app:cardElevation="6dp">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/book_cover"
             android:layout_width="100dp"
             android:layout_height="150dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginEnd="16dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/ic_book" />
+            android:scaleType="centerCrop"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
+            tools:src="@drawable/ic_book" />
 
         <TextView
             android:id="@+id/book_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/book_cover"
-            android:text="Book Title"
-            android:textAppearance="?attr/textAppearanceHeadline6" />
+            android:layout_marginStart="16dp"
+            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/book_cover"
+            app:layout_constraintTop_toTopOf="@+id/book_cover"
+            tools:text="Book Title" />
 
         <TextView
             android:id="@+id/book_author"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/book_name"
             android:layout_marginTop="4dp"
-            android:layout_toEndOf="@id/book_cover"
-            android:text="Author Name"
-            android:textAppearance="?attr/textAppearanceBody2" />
+            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/book_name"
+            app:layout_constraintTop_toBottomOf="@+id/book_name"
+            tools:text="Author Name" />
 
         <TextView
             android:id="@+id/book_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/book_author"
             android:layout_marginTop="8dp"
-            android:layout_toEndOf="@id/book_cover"
-            android:text="$19.99"
-            android:textAppearance="?attr/textAppearanceSubtitle1"
+            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
             android:textColor="?attr/colorPrimary"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/book_name"
+            app:layout_constraintTop_toBottomOf="@+id/book_author"
+            tools:text="$19.99" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/add_to_cart_button"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            style="@style/Widget.Material3.Button.TonalButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/book_price"
-            android:layout_marginTop="16dp"
-            android:layout_toEndOf="@id/book_cover"
-            android:text="Add to Cart" />
+            android:layout_marginTop="8dp"
+            android:text="Add to Cart"
+            app:layout_constraintBottom_toBottomOf="@+id/book_cover"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/book_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/add_to_cart_button"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
+            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
             android:visibility="gone"
-            android:text="Description" />
+            app:layout_constraintTop_toBottomOf="@+id/book_cover"
+            tools:text="This is a book description that can be quite long and detailed, providing readers with a good overview of the book's content." />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
