--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -9,6 +9,10 @@
             android:icon="@android:drawable/ic_menu_myplaces"
             android:title="Home" />
         <item
+            android:id="@+id/nav_my_cart"
+            android:icon="@android:drawable/ic_menu_sort_by_size"
+            android:title="My Cart" />
+        <item
             android:id="@+id/nav_gallery"
             android:icon="@android:drawable/ic_menu_gallery"
             android:title="Gallery" />
