--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -83,7 +83,7 @@
                         android:layout_height="220dp"
                         android:contentDescription="Book Banner"
                         android:scaleType="centerCrop"
-                        android:src="@android:drawable/ic_menu_gallery"
+                        android:src="@drawable/image_book"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
