--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -22,6 +22,6 @@
     <TextView
         android:id="@+id/product_total_price"
         android:layout_width="wrap_content"
-        android.layout_height="wrap_content" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
